fix settings width on mobile view

--- a/src/styles/PluginSettings.module.scss
+++ b/src/styles/PluginSettings.module.scss
@@ -8,7 +8,7 @@
 
   @include mobile {
     border-radius: 0px 10px 0 0;
-    width: 100%;
+    width: 100vw;
   }
 
   &_dropdowns {
